// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={380}
      createdAt={0}
      description="Rent"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={98000}
      createdAt={-864000000}
      description="Electricity"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={6200}
      createdAt={864000000}
      description="Transport"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`Should render ExpenseList with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No expenses Found!
      </span>
    </div>
  </div>
</div>
`;
